# pythonalgorithm_package

./: README.md  pyproject.toml
package_venv/: pyvenv.cfg
src/: testing.py
src/code_rit_algorithms/: kadanes.py  sort.py
src/code_rit_algorithms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
